[gd_scene load_steps=10 format=2]

[ext_resource path="res://Juegos/Estaciones/AreaAtraccion.tscn" type="PackedScene" id=1]
[ext_resource path="res://Juegos/Estaciones/base_enemiga_17.png" type="Texture" id=2]
[ext_resource path="res://Juegos/Estaciones/base_enemiga_028.png" type="Texture" id=3]
[ext_resource path="res://Juegos/Estaciones/base_enemiga_029.png" type="Texture" id=4]
[ext_resource path="res://Juegos/Estaciones/base_enemiga_024.png" type="Texture" id=5]
[ext_resource path="res://Juegos/Estaciones/BaseEnemiga.gd" type="Script" id=6]

[sub_resource type="Animation" id=1]
resource_name = "default"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AreaAtraccion/SpriteZonaRecarga:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "rotar_antihorario"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AreaAtraccion/SpriteZonaRecarga:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "rotar_horario"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AreaAtraccion/SpriteZonaRecarga:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="BaseEnemiga" type="Node2D"]
z_as_relative = false
script = ExtResource( 6 )

[node name="Sprites" type="Node2D" parent="."]
rotation = -6.28319
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Sprites"]
position = Vector2( 178, -98 )
texture = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="Sprites"]
position = Vector2( 0, -1 )
texture = ExtResource( 5 )

[node name="Sprite3" type="Sprite" parent="Sprites"]
position = Vector2( 4, -266 )
texture = ExtResource( 3 )

[node name="Sprite4" type="Sprite" parent="Sprites"]
position = Vector2( 4, -219 )
texture = ExtResource( 4 )

[node name="Area2D" type="Area2D" parent="."]

[node name="AreaAtraccion" parent="." instance=ExtResource( 1 )]
position = Vector2( -542, -210 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/default = SubResource( 1 )
anims/rotar_antihorario = SubResource( 2 )
anims/rotar_horario = SubResource( 3 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[editable path="AreaAtraccion"]
